--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeList">
+    app:startDestination="@id/homeListFragment">
     <activity
         android:id="@+id/mainActivity"
         android:name="com.denisbovsunivskyi.animetier.presentation.ui.MainActivity"
@@ -16,7 +16,7 @@
         app:popUpToInclusive="true" />
     <action
         android:id="@+id/action_global_home_list"
-        app:destination="@id/homeList"
+        app:destination="@id/homeListFragment"
         app:popUpTo="@id/nav_graph"
         app:popUpToInclusive="true" />
     <fragment
@@ -31,7 +31,7 @@
             app:popExitAnim="@anim/slide_out_anim" />
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeList"
+            app:destination="@id/homeListFragment"
             app:enterAnim="@anim/slide_in_anim"
             app:popExitAnim="@anim/slide_out_anim"
             app:popUpTo="@id/loginFragment"
@@ -52,7 +52,7 @@
             app:popExitAnim="@anim/slide_out_anim" />
     </fragment>
     <fragment
-        android:id="@+id/homeList"
+        android:id="@+id/homeListFragment"
         android:name="com.denisbovsunivskyi.animetier.presentation.ui.fragments.HomeList"
         android:label="fragment_home_list"
         tools:layout="@layout/fragment_home_list" >
@@ -64,10 +64,20 @@
         tools:layout="@layout/fragment_registration_profile_info" >
         <action
             android:id="@+id/action_registrationProfileInfoFragment_to_homeList"
-            app:destination="@id/homeList"
+            app:destination="@id/homeListFragment"
             app:enterAnim="@anim/slide_in_anim"
             app:popExitAnim="@anim/slide_out_anim"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true"/>
     </fragment>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.denisbovsunivskyi.animetier.presentation.ui.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
