--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
         <item name="android:textColor">@color/white</item>
     </style>
     <!--EditText-->
-    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+    <style name="TextInputLayout" parent="Widget.Material3.TextInputLayout.FilledBox">
         <item name="colorPrimary">@color/grey_dark</item>
         <item name="colorOnSurface">@color/grey_dark</item>
         <item name="boxStrokeColor">@color/grey_dark</item>
@@ -45,7 +45,7 @@
         <item name="errorTextColor">@color/black</item>
         <item name="errorIconTint">@color/black</item>
     </style>
-    <style name="TextInputLayoutMultiline" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="TextInputLayoutMultiline" parent="Widget.Material3.TextInputLayout.OutlinedBox">
         <item name="colorPrimary">@color/grey</item>
         <item name="colorOnSurface">@color/grey</item>
         <item name="boxStrokeColor">@color/grey</item>
@@ -114,5 +114,23 @@
 
     <style name="ButtonRounded.Dark" parent="ButtonRounded">
         <item name="android:backgroundTint">@color/grey_dark</item>
+    </style>
+    <!--Bottom nav -->
+    <style name="Theme.BottomNavBar" parent="Theme.Material3.DayNight">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnSurface">@color/grey</item>
+        <item name="colorSecondaryContainer">@color/primary</item>
+        <item name="colorSurface">@color/white</item>
+        <item name="colorOnSurfaceVariant">@color/grey</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/grey</item>
+        <item name="colorSecondaryVariant">@color/grey</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <!-- Status bar color. -->
+        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
