--- a/app/src/main/res/layout/item_horizontal_anime.xml
+++ b/app/src/main/res/layout/item_horizontal_anime.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="model"
-            type="com.denisbovsunivskyi.animetier.data.models.anime.tranding.TrendingAnimeDto" />
+            type="com.denisbovsunivskyi.animetier.data.models.anime.tranding.AnimeDto" />
 
 
     </data>
